--- a/config/clusterapi/controlplane/bases/controlplane.cluster.x-k8s.io_k0smotroncontrolplanetemplates.yaml
+++ b/config/clusterapi/controlplane/bases/controlplane.cluster.x-k8s.io_k0smotroncontrolplanetemplates.yaml
@@ -93,6 +93,9 @@ spec:
                           EnableMonitoring enables prometheus sidecar that scrapes metrics from the child cluster system components and expose
                           them as usual kubernetes pod metrics.
                         type: boolean
+                      etcdHighAvailability:
+                        description: ETCDHighAvailability enables etcd in HA mode.
+                        type: boolean
                       externalAddress:
                         description: |-
                           ExternalAddress defines k0s external address. See https://docs.k0sproject.io/stable/configuration/#specapi
@@ -2199,7 +2202,8 @@ spec:
                         default: 1
                         description: |-
                           Replicas is the desired number of replicas of the k0s control planes.
-                          If unspecified, defaults to 1. If the value is above 1, k0smotron requires kine datasource URL to be set.
+                          If unspecified, defaults to 1. If the value is above 1, k0smotron requires
+                          kine datasource URL to be set or ETCDHighAvailability to be enabled.
                           Recommended value is 3.
                         format: int32
                         type: integer
@@ -2276,6 +2280,12 @@ spec:
                             default: 30443
                             description: |-
                               APIPort defines the kubernetes API port. If empty k0smotron
+                              will pick it automatically.
+                            type: integer
+                          k0sApiPort:
+                            default: 39443
+                            description: |-
+                              K0sAPIPort defines the k0s API port. If empty k0smotron
                               will pick it automatically.
                             type: integer
                           konnectivityPort:
